# sootmix

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Makefile  PKGBUILD  README.md  REVIEWERS.md
.github/workflows/: release.yml
contrib/: install-daemon.sh  install.sh  sootmix-daemon.service  sootmix.desktop
crates/sootmix-daemon/: Cargo.toml
crates/sootmix-daemon/src/: config.rs  dbus.rs  main.rs  service.rs
crates/sootmix-daemon/src/audio/: mod.rs  native_loopback.rs  noise_filter.rs  pipewire_thread.rs  pulse_meter.rs  routing.rs  types.rs  virtual_sink.rs  volume.rs
crates/sootmix-ipc/: Cargo.toml
crates/sootmix-ipc/src/: lib.rs
crates/sootmix-plugin-api/: Cargo.toml
crates/sootmix-plugin-api/src/: lib.rs
crates/sootmix-rnnoise-ladspa/: Cargo.toml
crates/sootmix-rnnoise-ladspa/src/: lib.rs
src/: app.rs  daemon_client.rs  diagnostics.rs  main.rs  message.rs  single_instance.rs  state.rs  tray.rs
src/audio/: control.rs  filter_chain.rs  meter.rs  meter_stream.rs  mod.rs  pipewire_thread.rs  plugin_filter.rs  plugin_processor.rs  plugin_stream.rs  routing.rs  types.rs  virtual_sink.rs  volume.rs
src/config/: app_config.rs  eq_preset.rs  mod.rs  persistence.rs  preset.rs  routing_rules.rs
src/plugins/: builtin.rs  downloader.rs  host.rs  manager.rs  mod.rs  native.rs  registry.rs
src/plugins/builtin/: compressor.rs  dsp.rs  gate.rs  hpf.rs  mod.rs
src/plugins/lv2/: adapter.rs  mod.rs  scanner.rs  world.rs
src/plugins/vst3/: adapter.rs  factory.rs  mod.rs  scanner.rs
src/realtime/: atomic_params.rs  mod.rs  ringbuf.rs
src/ui/: apps_panel.rs  channel_strip.rs  focus_panel.rs  layout_drafts.rs  meter.rs  mod.rs  plugin_chain.rs  plugin_downloader.rs  routing_rules_panel.rs  settings_panel.rs  theme.rs
