[workspace]
members = [".", "crates/sootmix-plugin-api"]
resolver = "2"

[package]
name = "sootmix"
version = "0.1.0"
edition = "2021"
authors = ["SootMix Contributors"]
description = "Audio routing and mixing application for Linux using PipeWire"
license = "MPL-2.0"
repository = "https://github.com/FrozenTear/sootmix"
keywords = ["audio", "pipewire", "mixer", "linux"]
categories = ["multimedia::audio"]

[dependencies]
# Plugin system
sootmix-plugin-api = { path = "crates/sootmix-plugin-api" }
abi_stable = "0.11"
libloading = "0.8"
# GUI
iced = { version = "0.14", features = ["tokio", "advanced", "canvas"] }

# PipeWire
pipewire = "0.9"
libspa = "0.9"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
futures = { version = "0.3", features = ["std", "async-await"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"
regex = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
