[workspace]
members = [".", "crates/sootmix-plugin-api", "crates/sootmix-ipc", "crates/sootmix-daemon", "crates/sootmix-rnnoise-ladspa"]
resolver = "2"

[package]
name = "sootmix"
version = "0.2.3-4"
edition = "2021"
authors = ["SootMix Contributors"]
description = "Audio routing and mixing application for Linux using PipeWire"
license = "MPL-2.0"
repository = "https://github.com/FrozenTear/sootmix"
keywords = ["audio", "pipewire", "mixer", "linux"]
categories = ["multimedia::audio"]

[features]
default = ["lv2-plugins"]
lv2-plugins = ["lilv"]
vst3-plugins = ["vst3"]
all-plugins = ["lv2-plugins", "vst3-plugins"]

[dependencies]
# Plugin system
sootmix-plugin-api = { path = "crates/sootmix-plugin-api" }
sootmix-ipc = { path = "crates/sootmix-ipc" }
abi_stable = "0.11"
libloading = "0.8"

# GUI
iced = { version = "0.14", features = ["tokio", "advanced", "canvas"] }
iced_drop = { version = "0.2", features = ["helpers"] }

# D-Bus
zbus = "4"

# PipeWire
pipewire = "0.9"
libspa = "0.9"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-stream = "0.1"
futures = { version = "0.3", features = ["std", "async-await"] }
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"
dirs = "5"
regex = "1"
thiserror = "2"
tempfile = "3"
parking_lot = "0.12"
walkdir = "2"

# HTTP/Download
reqwest = { version = "0.12", features = ["stream"] }
flate2 = "1.0"
tar = "0.4"
xz2 = "0.1"
sevenz-rust = "0.6"

# Audio processing
nnnoiseless = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System tray
ksni = "0.3"

# Plugin formats (optional)
lilv = { version = "0.2", optional = true }
vst3 = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
