[package]
name = "sootmix-daemon"
version = "0.1.1"
edition = "2021"
authors = ["SootMix Contributors"]
description = "Background daemon for SootMix audio routing"
license = "MPL-2.0"

[[bin]]
name = "sootmix-daemon"
path = "src/main.rs"

[dependencies]
# IPC types
sootmix-ipc = { path = "../sootmix-ipc" }

# Plugin system
sootmix-plugin-api = { path = "../sootmix-plugin-api" }
abi_stable = "0.11"
libloading = "0.8"

# D-Bus
zbus = "4"

# PipeWire
pipewire = "0.9"
libspa = "0.9"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }
futures = { version = "0.3", features = ["std", "async-await"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"
regex = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Temp files for filter configs
tempfile = "3"

# Audio processing
nnnoiseless = "0.5"
bytemuck = { version = "1", features = ["derive"] }
